force-app/main/default/objects/Consolidated_Legal_Proceeding__c/Consolidated_Legal_Proceeding__c.object-meta.xml
<CustomObject>
    <label>Consolidated Legal Proceeding</label>
    <nameField>
        <label>Consolidated Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consolidated Legal Proceedings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>