force-app/main/default/objects/Consolidated_Legal_Proceeding__c/fields/Assigned_Court__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Court__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Court</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Court</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consolidated Legal Proceedings (Assigned Court)</relationshipLabel>
    <relationshipName>Consolidated_Legal_Proceedings</relationshipName>
    <type>Lookup</type>
</CustomField>