force-app/main/default/objects/Consolidated_Legal_Proceeding__c/fields/Consolidated_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Close_Date__c</fullName>
    <label>Consolidated Close Date</label>
    <type>Date</type>
</CustomField>