force-app/main/default/objects/Consolidated_Legal_Proceeding__c/fields/Consolidated_Notes__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Notes__c</fullName>
    <label>Consolidated Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>