force-app/main/default/objects/Consolidated_Legal_Proceeding__c/fields/Consolidated_Number__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Number__c</fullName>
    <label>Consolidated Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>