force-app/main/default/objects/Consolidated_Legal_Proceeding__c/fields/Consolidated_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Start_Date__c</fullName>
    <label>Consolidated Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>