force-app/main/default/objects/Consolidated_Legal_Proceeding__c/fields/Consolidated_Status__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Status__c</fullName>
    <label>Consolidated Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active – Pretrial</fullName>
            </value>
            <value>
                <fullName>Active – Bellwether Phase</fullName>
            </value>
            <value>
                <fullName>Settlement Phase</fullName>
            </value>
            <value>
                <fullName>Claims Administration</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>