force-app/main/default/objects/Consolidated_Legal_Proceeding__c/fields/External_Docket_URL__c.field-meta.xml
<CustomField>
    <fullName>External_Docket_URL__c</fullName>
    <label>External Docket URL</label>
    <type>Url</type>
</CustomField>