force-app/main/default/objects/Consolidated_Legal_Proceeding__c/fields/Presiding_Judge__c.field-meta.xml
<CustomField>
    <fullName>Presiding_Judge__c</fullName>
    <label>Presiding Judge</label>
    <length>150</length>
    <type>Text</type>
</CustomField>